# mango

./: .gitignore  CMakeLists.txt  README.md  build_third.bat  doc.md  main.cpp  prepare.sh  triangle_app.cpp  triangle_app.h  vk_triangle.cpp  vma_use_volk.patch  window_app.cpp  window_app.h
data/cube/: cube.mtl
data/plane/: plane0.mtl  plane1.mtl
doc/: doc.md  scene.md
framework/: CMakeLists.txt  app_base.h  buffer.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h  error.h  logging.h  physical_device.cpp  physical_device.h  pipeline.cpp  pipeline.h  pipeline_layout.cpp  pipeline_layout.h  pipeline_state.cpp  pipeline_state.h  resource_cache.cpp  resource_cache.h  shader_module.cpp  shader_module.h  spirv_reflection.cpp  spirv_reflection.h  strings.cpp  strings.h  vk_driver.cpp  vk_driver.h  window_app.cpp  window_app.h
framework/app_template/: app_base.h  app_manager.cpp  app_manager.h
framework/functional/component/: light.h  material.cpp  material.h  material_normal_vis.cpp  material_normal_vis.h  material_pbr.cpp  material_pbr.h  mesh.h
framework/functional/global/: app_context.cpp  app_context.h
framework/functional/render/: render.cpp  render.h
framework/functional/render/pass/: rpass.cpp  rpass.h
framework/functional/scene/: scene.cpp  scene.h
framework/platform/: file_system.cpp  glfw_window.cpp  glfw_window.h  input_events.h  window.h
framework/resources/: asset_manager.cpp  asset_manager.hpp  loader.cpp  loader.h
framework/scene/: asset_manager.cpp  asset_manager.h  asset_manager.hpp  camera.h  loader.cpp  loader.h  render.cpp  render.h  renderable.h  rpass.cpp  rpass.h  scene.cpp  scene.h
framework/scene/component/: basic.h  camera.h  light.h  material.cpp  material.h  material_normal_vis.cpp  material_normal_vis.h  material_pbr.cpp  material_pbr.h  mesh.h
framework/utils/: app_base.h  app_context.cpp  app_context.h  app_manager.cpp  app_manager.h  data_reshaper.hpp  error.h  gui.cpp  gui.h  logging.h  memory.cpp  memory.h  spirv_reflection.cpp  spirv_reflection.h  strings.cpp  trackball.cpp  trackball.h  window_app.cpp  window_app.h
framework/utils/base/: data_reshaper.hpp  error.h  logging.h  macro.h  strings.cpp
framework/utils/vk/: buffer.cpp  buffer.h  commands.cpp  commands.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h  frame_buffer.cpp  frame_buffer.h  image.cpp  image.h  physical_device.cpp  physical_device.h  pipeline.cpp  pipeline.h  pipeline_layout.cpp  pipeline_layout.h  pipeline_state.cpp  pipeline_state.h  queue.cpp  render_pass.cpp  resource_cache.cpp  resource_cache.h  sampler.cpp  sampler.h  shader_module.cpp  shader_module.h  spirv_reflection.cpp  spirv_reflection.h  stage_pool.cpp  stage_pool.h  swapchain.cpp  swapchain.h  syncs.cpp  syncs.h  vk_common.cpp  vk_common.h  vk_config.cpp  vk_config.h  (+2 more)
framework/vk/: barriers.h  buffer.cpp  buffer.h  command_pool.cpp  command_pool.h  commands.cpp  commands.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h  frame_buffer.cpp  frame_buffer.h  image.cpp  image.h  physical_device.cpp  physical_device.h  pipeline.cpp  pipeline.h  pipeline_layout.cpp  pipeline_layout.h  pipeline_state.cpp  pipeline_state.h  queue.cpp  queue.h  render_pass.cpp  render_pass.h  resource_cache.cpp  resource_cache.h  sampler.cpp  sampler.h  shader_module.cpp  shader_module.h  stage_pool.cpp  stage_pool.h  swapchain.cpp  swapchain.h  syncs.cpp  syncs.h  vk_common.cpp  (+6 more)
samples/st_triangle/: CMakeLists.txt  main.cpp
samples/triangle/: CMakeLists.txt  main.cpp  triangle_app.cpp  triangle_app.h
samples/viewer/: CMakeLists.txt  main.cpp  viewer_app.cpp  viewer_app.h
shaders/: basic.frag  basic.vert  pbr.frag  standard_pbr.frag  standard_pbr.vert  triangle.frag  triangle.vert
test/: CMakeLists.txt  main.cpp
